welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:1: error: not found: value n
var dif = Math.abs(n-21)
                   ^